# yt-down

./: .gitignore  README.md  download_playlist.sh
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260311_0001_create_playlists_and_videos.py  20260312_0002_add_use_title_as_folder.py  20260312_0003_add_playlist_index_to_videos.py  20260316_0004_remove_playlist_cookies_browser.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: activity.py  health.py  library.py  playlists.py  videos.py
apps/api/app/core/: config.py
apps/api/app/models/: __init__.py  playlist.py  video.py
apps/api/app/schemas/: __init__.py  activity.py  library.py  playlist.py  video.py
apps/api/app/services/: activity.py  downloads.py  folder_picker.py  library.py  playlists.py  ytdlp.py
apps/web/: README.md  index.html  package.json  pnpm-lock.yaml
apps/web/src/: App.tsx  styles.css
apps/web/src/api/: client.ts
apps/web/src/features/health/: use-app-health.ts
apps/web/src/features/playlists/: playlists-page.tsx  use-playlists.ts
docs/: implementation-plan.md
infra/: README.md
